APIs/googleapis.com/translate/v2/python-client/README.md
# openapi-client
The Google Cloud Translation API lets websites and programs integrate with
    Google Translate programmatically.

This Python package is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: v2
- Package version: 1.0.0
- Generator version: 7.9.0
- Build package: org.openapitools.codegen.languages.PythonClientCodegen
For more information, please visit [https://google.com](https://google.com)

## Requirements.

Python 3.7+

## Installation & Usage
### pip install

If the python package is hosted on a repository, you can install directly using:

```sh
pip install git+https://github.com/GIT_USER_ID/GIT_REPO_ID.git
```
(you may need to run `pip` with root permission: `sudo pip install git+https://github.com/GIT_USER_ID/GIT_REPO_ID.git`)

Then import the package:
```python
import openapi_client
```

### Setuptools

Install via [Setuptools](http://pypi.python.org/pypi/setuptools).

```sh
python setup.py install --user
```
(or `sudo python setup.py install` to install the package for all users)

Then import the package:
```python
import openapi_client
```

### Tests

Execute `pytest` to run the tests.

## Getting Started

Please follow the [installation procedure](#installation--usage) and then run the following:

```python

import openapi_client
from openapi_client.rest import ApiException
from pprint import pprint

# Defining the host is optional and defaults to https://translation.googleapis.com/language/translate
# See configuration.py for a list of all supported configuration parameters.
configuration = openapi_client.Configuration(
    host = "https://translation.googleapis.com/language/translate"
)

# The client must configure the authentication and authorization parameters
# in accordance with the API server security policy.
# Examples for each auth method are provided below, use the example that
# satisfies your auth use case.

configuration.access_token = os.environ["ACCESS_TOKEN"]

configuration.access_token = os.environ["ACCESS_TOKEN"]


# Enter a context with an instance of the API client
with openapi_client.ApiClient(configuration) as api_client:
    # Create an instance of the API class
    api_instance = openapi_client.DetectionsApi(api_client)
    xgafv = 'xgafv_example' # str | V1 error format. (optional)
    access_token = 'access_token_example' # str | OAuth access token. (optional)
    alt = 'alt_example' # str | Data format for response. (optional)
    bearer_token = 'bearer_token_example' # str | OAuth bearer token. (optional)
    param_callback = 'param_callback_example' # str | JSONP (optional)
    fields = 'fields_example' # str | Selector specifying which fields to include in a partial response. (optional)
    key = 'key_example' # str | API key. Your API key identifies your project and provides you with API access, quota, and reports. Required unless you provide an OAuth 2.0 token. (optional)
    oauth_token = 'oauth_token_example' # str | OAuth 2.0 token for the current user. (optional)
    pp = True # bool | Pretty-print response. (optional)
    pretty_print = True # bool | Returns response with indentations and line breaks. (optional)
    quota_user = 'quota_user_example' # str | Available to use for quota purposes for server-side applications. Can be any arbitrary string assigned to a user, but should not exceed 40 characters. Overrides userIp if both are provided. (optional)
    upload_protocol = 'upload_protocol_example' # str | Upload protocol for media (e.g. \"raw\", \"multipart\"). (optional)
    upload_type = 'upload_type_example' # str | Legacy upload protocol for media (e.g. \"media\", \"multipart\"). (optional)
    detect_language_request = openapi_client.DetectLanguageRequest() # DetectLanguageRequest |  (optional)

    try:
        api_response = api_instance.language_detections_detect(xgafv=xgafv, access_token=access_token, alt=alt, bearer_token=bearer_token, param_callback=param_callback, fields=fields, key=key, oauth_token=oauth_token, pp=pp, pretty_print=pretty_print, quota_user=quota_user, upload_protocol=upload_protocol, upload_type=upload_type, detect_language_request=detect_language_request)
        print("The response of DetectionsApi->language_detections_detect:\n")
        pprint(api_response)
    except ApiException as e:
        print("Exception when calling DetectionsApi->language_detections_detect: %s\n" % e)

```

## Documentation for API Endpoints

All URIs are relative to *https://translation.googleapis.com/language/translate*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*DetectionsApi* | [**language_detections_detect**](docs/DetectionsApi.md#language_detections_detect) | **POST** /v2/detect | 
*DetectionsApi* | [**language_detections_list**](docs/DetectionsApi.md#language_detections_list) | **GET** /v2/detect | 
*LanguagesApi* | [**language_languages_list**](docs/LanguagesApi.md#language_languages_list) | **GET** /v2/languages | 
*TranslationsApi* | [**language_translations_list**](docs/TranslationsApi.md#language_translations_list) | **GET** /v2 | 
*TranslationsApi* | [**language_translations_translate**](docs/TranslationsApi.md#language_translations_translate) | **POST** /v2 | 


## Documentation For Models

 - [DetectLanguageRequest](docs/DetectLanguageRequest.md)
 - [DetectionsListResponse](docs/DetectionsListResponse.md)
 - [DetectionsResourceInner](docs/DetectionsResourceInner.md)
 - [GetSupportedLanguagesRequest](docs/GetSupportedLanguagesRequest.md)
 - [LanguagesListResponse](docs/LanguagesListResponse.md)
 - [LanguagesResource](docs/LanguagesResource.md)
 - [TranslateTextRequest](docs/TranslateTextRequest.md)
 - [TranslationsListResponse](docs/TranslationsListResponse.md)
 - [TranslationsResource](docs/TranslationsResource.md)


<a id="documentation-for-authorization"></a>
## Documentation For Authorization


Authentication schemes defined for the API:
<a id="Oauth2"></a>
### Oauth2

- **Type**: OAuth
- **Flow**: implicit
- **Authorization URL**: https://accounts.google.com/o/oauth2/auth
- **Scopes**: 
 - **https://www.googleapis.com/auth/cloud-platform**: View and manage your data across Google Cloud Platform services
 - **https://www.googleapis.com/auth/cloud-translation**: Translate text from one language to another using Google Translate

<a id="Oauth2c"></a>
### Oauth2c

- **Type**: OAuth
- **Flow**: accessCode
- **Authorization URL**: https://accounts.google.com/o/oauth2/auth
- **Scopes**: 
 - **https://www.googleapis.com/auth/cloud-platform**: View and manage your data across Google Cloud Platform services
 - **https://www.googleapis.com/auth/cloud-translation**: Translate text from one language to another using Google Translate


## Author




