APIs/googleapis.com/translate/v3/python-client/README.md
# openapi-client
Integrates text translation into your website or application.

This Python package is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: v3
- Package version: 1.0.0
- Generator version: 7.9.0
- Build package: org.openapitools.codegen.languages.PythonClientCodegen
For more information, please visit [https://google.com](https://google.com)

## Requirements.

Python 3.7+

## Installation & Usage
### pip install

If the python package is hosted on a repository, you can install directly using:

```sh
pip install git+https://github.com/GIT_USER_ID/GIT_REPO_ID.git
```
(you may need to run `pip` with root permission: `sudo pip install git+https://github.com/GIT_USER_ID/GIT_REPO_ID.git`)

Then import the package:
```python
import openapi_client
```

### Setuptools

Install via [Setuptools](http://pypi.python.org/pypi/setuptools).

```sh
python setup.py install --user
```
(or `sudo python setup.py install` to install the package for all users)

Then import the package:
```python
import openapi_client
```

### Tests

Execute `pytest` to run the tests.

## Getting Started

Please follow the [installation procedure](#installation--usage) and then run the following:

```python

import openapi_client
from openapi_client.rest import ApiException
from pprint import pprint

# Defining the host is optional and defaults to https://translation.googleapis.com
# See configuration.py for a list of all supported configuration parameters.
configuration = openapi_client.Configuration(
    host = "https://translation.googleapis.com"
)

# The client must configure the authentication and authorization parameters
# in accordance with the API server security policy.
# Examples for each auth method are provided below, use the example that
# satisfies your auth use case.

configuration.access_token = os.environ["ACCESS_TOKEN"]

configuration.access_token = os.environ["ACCESS_TOKEN"]


# Enter a context with an instance of the API client
with openapi_client.ApiClient(configuration) as api_client:
    # Create an instance of the API class
    api_instance = openapi_client.ProjectsApi(api_client)
    parent = 'parent_example' # str | Required. The resource name of the project from which to list the Adaptive MT files. `projects/{project}/locations/{location}/adaptiveMtDatasets/{dataset}`
    xgafv = 'xgafv_example' # str | V1 error format. (optional)
    access_token = 'access_token_example' # str | OAuth access token. (optional)
    alt = 'alt_example' # str | Data format for response. (optional)
    param_callback = 'param_callback_example' # str | JSONP (optional)
    fields = 'fields_example' # str | Selector specifying which fields to include in a partial response. (optional)
    key = 'key_example' # str | API key. Your API key identifies your project and provides you with API access, quota, and reports. Required unless you provide an OAuth 2.0 token. (optional)
    oauth_token = 'oauth_token_example' # str | OAuth 2.0 token for the current user. (optional)
    pretty_print = True # bool | Returns response with indentations and line breaks. (optional)
    quota_user = 'quota_user_example' # str | Available to use for quota purposes for server-side applications. Can be any arbitrary string assigned to a user, but should not exceed 40 characters. (optional)
    upload_protocol = 'upload_protocol_example' # str | Upload protocol for media (e.g. \"raw\", \"multipart\"). (optional)
    upload_type = 'upload_type_example' # str | Legacy upload protocol for media (e.g. \"media\", \"multipart\"). (optional)
    page_size = 56 # int | Optional.  (optional)
    page_token = 'page_token_example' # str | Optional. A token identifying a page of results the server should return. Typically, this is the value of ListAdaptiveMtFilesResponse.next_page_token returned from the previous call to `ListAdaptiveMtFiles` method. The first page is returned if `page_token`is empty or missing. (optional)

    try:
        api_response = api_instance.translate_projects_locations_adaptive_mt_datasets_adaptive_mt_files_list(parent, xgafv=xgafv, access_token=access_token, alt=alt, param_callback=param_callback, fields=fields, key=key, oauth_token=oauth_token, pretty_print=pretty_print, quota_user=quota_user, upload_protocol=upload_protocol, upload_type=upload_type, page_size=page_size, page_token=page_token)
        print("The response of ProjectsApi->translate_projects_locations_adaptive_mt_datasets_adaptive_mt_files_list:\n")
        pprint(api_response)
    except ApiException as e:
        print("Exception when calling ProjectsApi->translate_projects_locations_adaptive_mt_datasets_adaptive_mt_files_list: %s\n" % e)

```

## Documentation for API Endpoints

All URIs are relative to *https://translation.googleapis.com*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*ProjectsApi* | [**translate_projects_locations_adaptive_mt_datasets_adaptive_mt_files_list**](docs/ProjectsApi.md#translate_projects_locations_adaptive_mt_datasets_adaptive_mt_files_list) | **GET** /v3/{parent}/adaptiveMtFiles | 
*ProjectsApi* | [**translate_projects_locations_adaptive_mt_datasets_adaptive_mt_sentences_list**](docs/ProjectsApi.md#translate_projects_locations_adaptive_mt_datasets_adaptive_mt_sentences_list) | **GET** /v3/{parent}/adaptiveMtSentences | 
*ProjectsApi* | [**translate_projects_locations_adaptive_mt_datasets_create**](docs/ProjectsApi.md#translate_projects_locations_adaptive_mt_datasets_create) | **POST** /v3/{parent}/adaptiveMtDatasets | 
*ProjectsApi* | [**translate_projects_locations_adaptive_mt_datasets_import_adaptive_mt_file**](docs/ProjectsApi.md#translate_projects_locations_adaptive_mt_datasets_import_adaptive_mt_file) | **POST** /v3/{parent}:importAdaptiveMtFile | 
*ProjectsApi* | [**translate_projects_locations_adaptive_mt_datasets_list**](docs/ProjectsApi.md#translate_projects_locations_adaptive_mt_datasets_list) | **GET** /v3/{parent}/adaptiveMtDatasets | 
*ProjectsApi* | [**translate_projects_locations_adaptive_mt_translate**](docs/ProjectsApi.md#translate_projects_locations_adaptive_mt_translate) | **POST** /v3/{parent}:adaptiveMtTranslate | 
*ProjectsApi* | [**translate_projects_locations_batch_translate_document**](docs/ProjectsApi.md#translate_projects_locations_batch_translate_document) | **POST** /v3/{parent}:batchTranslateDocument | 
*ProjectsApi* | [**translate_projects_locations_batch_translate_text**](docs/ProjectsApi.md#translate_projects_locations_batch_translate_text) | **POST** /v3/{parent}:batchTranslateText | 
*ProjectsApi* | [**translate_projects_locations_datasets_create**](docs/ProjectsApi.md#translate_projects_locations_datasets_create) | **POST** /v3/{parent}/datasets | 
*ProjectsApi* | [**translate_projects_locations_datasets_examples_list**](docs/ProjectsApi.md#translate_projects_locations_datasets_examples_list) | **GET** /v3/{parent}/examples | 
*ProjectsApi* | [**translate_projects_locations_datasets_export_data**](docs/ProjectsApi.md#translate_projects_locations_datasets_export_data) | **POST** /v3/{dataset}:exportData | 
*ProjectsApi* | [**translate_projects_locations_datasets_import_data**](docs/ProjectsApi.md#translate_projects_locations_datasets_import_data) | **POST** /v3/{dataset}:importData | 
*ProjectsApi* | [**translate_projects_locations_datasets_list**](docs/ProjectsApi.md#translate_projects_locations_datasets_list) | **GET** /v3/{parent}/datasets | 
*ProjectsApi* | [**translate_projects_locations_detect_language**](docs/ProjectsApi.md#translate_projects_locations_detect_language) | **POST** /v3/{parent}:detectLanguage | 
*ProjectsApi* | [**translate_projects_locations_get_supported_languages**](docs/ProjectsApi.md#translate_projects_locations_get_supported_languages) | **GET** /v3/{parent}/supportedLanguages | 
*ProjectsApi* | [**translate_projects_locations_glossaries_create**](docs/ProjectsApi.md#translate_projects_locations_glossaries_create) | **POST** /v3/{parent}/glossaries | 
*ProjectsApi* | [**translate_projects_locations_glossaries_glossary_entries_create**](docs/ProjectsApi.md#translate_projects_locations_glossaries_glossary_entries_create) | **POST** /v3/{parent}/glossaryEntries | 
*ProjectsApi* | [**translate_projects_locations_glossaries_glossary_entries_list**](docs/ProjectsApi.md#translate_projects_locations_glossaries_glossary_entries_list) | **GET** /v3/{parent}/glossaryEntries | 
*ProjectsApi* | [**translate_projects_locations_glossaries_glossary_entries_patch**](docs/ProjectsApi.md#translate_projects_locations_glossaries_glossary_entries_patch) | **PATCH** /v3/{name} | 
*ProjectsApi* | [**translate_projects_locations_glossaries_list**](docs/ProjectsApi.md#translate_projects_locations_glossaries_list) | **GET** /v3/{parent}/glossaries | 
*ProjectsApi* | [**translate_projects_locations_list**](docs/ProjectsApi.md#translate_projects_locations_list) | **GET** /v3/{name}/locations | 
*ProjectsApi* | [**translate_projects_locations_models_create**](docs/ProjectsApi.md#translate_projects_locations_models_create) | **POST** /v3/{parent}/models | 
*ProjectsApi* | [**translate_projects_locations_models_list**](docs/ProjectsApi.md#translate_projects_locations_models_list) | **GET** /v3/{parent}/models | 
*ProjectsApi* | [**translate_projects_locations_operations_cancel**](docs/ProjectsApi.md#translate_projects_locations_operations_cancel) | **POST** /v3/{name}:cancel | 
*ProjectsApi* | [**translate_projects_locations_operations_delete**](docs/ProjectsApi.md#translate_projects_locations_operations_delete) | **DELETE** /v3/{name} | 
*ProjectsApi* | [**translate_projects_locations_operations_get**](docs/ProjectsApi.md#translate_projects_locations_operations_get) | **GET** /v3/{name} | 
*ProjectsApi* | [**translate_projects_locations_operations_list**](docs/ProjectsApi.md#translate_projects_locations_operations_list) | **GET** /v3/{name}/operations | 
*ProjectsApi* | [**translate_projects_locations_operations_wait**](docs/ProjectsApi.md#translate_projects_locations_operations_wait) | **POST** /v3/{name}:wait | 
*ProjectsApi* | [**translate_projects_locations_romanize_text**](docs/ProjectsApi.md#translate_projects_locations_romanize_text) | **POST** /v3/{parent}:romanizeText | 
*ProjectsApi* | [**translate_projects_locations_translate_document**](docs/ProjectsApi.md#translate_projects_locations_translate_document) | **POST** /v3/{parent}:translateDocument | 
*ProjectsApi* | [**translate_projects_locations_translate_text**](docs/ProjectsApi.md#translate_projects_locations_translate_text) | **POST** /v3/{parent}:translateText | 


## Documentation For Models

 - [AdaptiveMtDataset](docs/AdaptiveMtDataset.md)
 - [AdaptiveMtFile](docs/AdaptiveMtFile.md)
 - [AdaptiveMtSentence](docs/AdaptiveMtSentence.md)
 - [AdaptiveMtTranslateRequest](docs/AdaptiveMtTranslateRequest.md)
 - [AdaptiveMtTranslateResponse](docs/AdaptiveMtTranslateResponse.md)
 - [AdaptiveMtTranslation](docs/AdaptiveMtTranslation.md)
 - [BatchDocumentInputConfig](docs/BatchDocumentInputConfig.md)
 - [BatchDocumentOutputConfig](docs/BatchDocumentOutputConfig.md)
 - [BatchTranslateDocumentRequest](docs/BatchTranslateDocumentRequest.md)
 - [BatchTranslateTextRequest](docs/BatchTranslateTextRequest.md)
 - [Dataset](docs/Dataset.md)
 - [DatasetInputConfig](docs/DatasetInputConfig.md)
 - [DatasetOutputConfig](docs/DatasetOutputConfig.md)
 - [DetectLanguageRequest](docs/DetectLanguageRequest.md)
 - [DetectLanguageResponse](docs/DetectLanguageResponse.md)
 - [DetectedLanguage](docs/DetectedLanguage.md)
 - [DocumentInputConfig](docs/DocumentInputConfig.md)
 - [DocumentOutputConfig](docs/DocumentOutputConfig.md)
 - [DocumentTranslation](docs/DocumentTranslation.md)
 - [Example](docs/Example.md)
 - [ExportDataRequest](docs/ExportDataRequest.md)
 - [FileInputSource](docs/FileInputSource.md)
 - [GcsDestination](docs/GcsDestination.md)
 - [GcsInputSource](docs/GcsInputSource.md)
 - [GcsOutputDestination](docs/GcsOutputDestination.md)
 - [GcsSource](docs/GcsSource.md)
 - [Glossary](docs/Glossary.md)
 - [GlossaryEntry](docs/GlossaryEntry.md)
 - [GlossaryInputConfig](docs/GlossaryInputConfig.md)
 - [GlossaryTerm](docs/GlossaryTerm.md)
 - [GlossaryTermsPair](docs/GlossaryTermsPair.md)
 - [GlossaryTermsSet](docs/GlossaryTermsSet.md)
 - [ImportAdaptiveMtFileRequest](docs/ImportAdaptiveMtFileRequest.md)
 - [ImportAdaptiveMtFileResponse](docs/ImportAdaptiveMtFileResponse.md)
 - [ImportDataRequest](docs/ImportDataRequest.md)
 - [InputConfig](docs/InputConfig.md)
 - [InputFile](docs/InputFile.md)
 - [LanguageCodePair](docs/LanguageCodePair.md)
 - [LanguageCodesSet](docs/LanguageCodesSet.md)
 - [ListAdaptiveMtDatasetsResponse](docs/ListAdaptiveMtDatasetsResponse.md)
 - [ListAdaptiveMtFilesResponse](docs/ListAdaptiveMtFilesResponse.md)
 - [ListAdaptiveMtSentencesResponse](docs/ListAdaptiveMtSentencesResponse.md)
 - [ListDatasetsResponse](docs/ListDatasetsResponse.md)
 - [ListExamplesResponse](docs/ListExamplesResponse.md)
 - [ListGlossariesResponse](docs/ListGlossariesResponse.md)
 - [ListGlossaryEntriesResponse](docs/ListGlossaryEntriesResponse.md)
 - [ListLocationsResponse](docs/ListLocationsResponse.md)
 - [ListModelsResponse](docs/ListModelsResponse.md)
 - [ListOperationsResponse](docs/ListOperationsResponse.md)
 - [Location](docs/Location.md)
 - [Model](docs/Model.md)
 - [Operation](docs/Operation.md)
 - [OutputConfig](docs/OutputConfig.md)
 - [Romanization](docs/Romanization.md)
 - [RomanizeTextRequest](docs/RomanizeTextRequest.md)
 - [RomanizeTextResponse](docs/RomanizeTextResponse.md)
 - [Status](docs/Status.md)
 - [SupportedLanguage](docs/SupportedLanguage.md)
 - [SupportedLanguages](docs/SupportedLanguages.md)
 - [TranslateDocumentRequest](docs/TranslateDocumentRequest.md)
 - [TranslateDocumentResponse](docs/TranslateDocumentResponse.md)
 - [TranslateTextGlossaryConfig](docs/TranslateTextGlossaryConfig.md)
 - [TranslateTextRequest](docs/TranslateTextRequest.md)
 - [TranslateTextResponse](docs/TranslateTextResponse.md)
 - [Translation](docs/Translation.md)
 - [TransliterationConfig](docs/TransliterationConfig.md)
 - [WaitOperationRequest](docs/WaitOperationRequest.md)


<a id="documentation-for-authorization"></a>
## Documentation For Authorization


Authentication schemes defined for the API:
<a id="Oauth2"></a>
### Oauth2

- **Type**: OAuth
- **Flow**: implicit
- **Authorization URL**: https://accounts.google.com/o/oauth2/auth
- **Scopes**: 
 - **https://www.googleapis.com/auth/cloud-platform**: See, edit, configure, and delete your Google Cloud data and see the email address for your Google Account.
 - **https://www.googleapis.com/auth/cloud-translation**: Translate text from one language to another using Google Translate

<a id="Oauth2c"></a>
### Oauth2c

- **Type**: OAuth
- **Flow**: accessCode
- **Authorization URL**: https://accounts.google.com/o/oauth2/auth
- **Scopes**: 
 - **https://www.googleapis.com/auth/cloud-platform**: See, edit, configure, and delete your Google Cloud data and see the email address for your Google Account.
 - **https://www.googleapis.com/auth/cloud-translation**: Translate text from one language to another using Google Translate


## Author




